--- a/config/smart_citizen_kit/actions.yaml
+++ b/config/smart_citizen_kit/actions.yaml
@@ -8,6 +8,7 @@ actions:
       lat: device.location.latitude
       lon: device.location.longitude
       author : device.owner.username
+      station_created_at: device.created_at
 
       # To add later
       # location_exposure: device.location.exposure
@@ -15,40 +16,33 @@ actions:
       # external_uuid: device.uuid
       # station_description: device.description
       # hardware_name: device.hardware.name
-      # device_created_at: device.created_at
   
   - class: SetConstants
     set:
       platform: smart_citizen_kit
-      aggregation_type: chunked
+      aggregation_type: by_time
 
   - class: ComputeStationId
+  # - class: ConvertDtypes
+  - class: FormatChecks
   - class: ComputeChunkDateTime
 
   - class: CanonicaliseColumns
     mappings: !include mappings.yaml
     move_to_front:
+      - platform
+      - author
       - station_id
       - external_station_id
       - station_name
-      - author
       - aggregation_type
       - chunk_date
-      - platform
       - chunk_time
       - datetime
       - lat
       - lon
 
   - class: UpdateStationMetadata
-
-  - class: SplitOnColumnValue
-    column: station_id
-
-  - class: DropNaNColumns
-  - class: DropNaNRows
-  - class: DropEmpty
-
   - class: ComputeMARSIdentifier
     lookup:
       class: const.rd
@@ -57,8 +51,28 @@ actions:
       aggregation_type: data.aggregation_type
       platform: data.platform
       date: data.chunk_date
-      internal_id: data.station_id
       time: data.chunk_time
       version: const.1
 
-    forward_to_names: ["final_processing"]
+    forward_to_names: ["final_processing"]     
+
+  # - class: SplitOnColumnValue
+  #   column: station_id
+
+  # - class: DropNaNColumns
+  # - class: DropNaNRows
+  # - class: DropEmpty
+
+  # - class: ComputeMARSIdentifier
+  #   lookup:
+  #     class: const.rd
+  #     expver: const.xxxx
+  #     stream: const.lwda
+  #     aggregation_type: data.aggregation_type
+  #     platform: data.platform
+  #     date: data.chunk_date
+  #     internal_id: data.station_id
+  #     time: data.chunk_time
+  #     version: const.1
+
+  #   forward_to_names: ["final_processing"]
