--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "wurlitzer",  # For printing C++ output in the console
     "cachetools",
     "responses",
+    "dill",
 
 
     # ECMWF dependencies
