--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ dependencies = [
 
     # ECMWF dependencies
     "pyodc @ git+https://github.com/ecmwf/pyodc.git@develop",
-    "pyaviso @ git+https://github.com/ecmwf/aviso.git@develop",
-    "pyfdb @ git+https://github.com/ecmwf/pyfdb.git@feature/add-fdb-archive-not-multiple",
+    "pyaviso @ git+https://github.com/ecmwf/aviso.git@main",
+    "pyfdb @ git+https://github.com/ecmwf/pyfdb.git@develop",
     "findlibs",
 ]
 
