add df constants; tidy imports; fix data paths

--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,9 @@ config.yaml
 pygeoapi-config.yaml
 
 
-data*/
-/projections/
-raw-data/
+data/
+data-projections/
+data-raw/
 
 
 !*.example.env
-
-# temporary
-ionbeam/cli
