add acronet; implement legacy api; implement legacy api projection service

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,11 @@ dependencies = [
     "brotlipy>=0.7.0",
     "cf-units>=3.3.0",
     "click>=8.0.0",
+    "deepdiff>=8.6.1",
     "dependency-injector[yaml]>=4.48.1",
+    "duckdb>=1.4.1",
     "eccodes>=2.42.0",
+    "fastapi[standard]>=0.119.1",
     "faststream[cli,prometheus,rabbit]==0.5.48",
     "geojson>=3.2.0",
     "geopandas>=1.1.1",
