migrate ionbeam core to package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ members = [
     "ionbeam-cli",
     "ionbeam-client",
     "ionbeam",
-    "legacy-api",
+    "ionbeam-legacy-api",
     "data-sources/*",
     "exporters/*"
 ]
