--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: documentation-ionbeam
-          path: docs_out/sphinx
+          path: docs_out/
   preview-publish-docs:
     if: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' }}
     needs: build-docs
