add theme; tidy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dev = [
 docs = [
     "sphinx>=8.2.3",
     "sphinxcontrib-mermaid>=1.1.0",
+    "pydata-sphinx-theme>=0.16.1",
     "ionbeam-client",
 ]
 
